2002-09-27 Araki Ken <arakiken@users.sf.net>

	* x_imagelib_*.o linked directly, not via x_imagelib.o.
	  (Thanks to Nobuyoshi Nakada san)

2002-09-20  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* kiklib: link kik_pty_*.o and kik_utmp_*.o directly, not via
	  kik_pty.o and kik_utmp.o.

2002-09-17  MINAMI Hirokazu  <minami@chem.s.u-tokyo.ac.jp>

	* Renamed x_picdep_* to x_imagelib_*
	* When image has alpha channel, wallpapers can be patially translucent
	  with gdk-pixbuf imagelib module.
	  (unfinished and not updated poperly yet ...)

2002-09-16  Seiichi SATO <ssato@sh.rim.or.jp>

	* Cleaned up to get rid of compiler warning messages with gcc.

2002-09-16  MINAMI Hirokazu  <minami@chem.s.u-tokyo.ac.jp>

	* Major rewrite of icon handling
	 - Added new members (icon and mask) to struct x_window_t
	 - Actuall icon setting process is now done in x_window.c.
	 - remove icon cache from x_picture_gdk which seems not to be useful.
	
2002-09-15  MINAMI Hirokazu  <minami@chem.s.u-tokyo.ac.jp>

	*  x_picdep_load_icon( &data,&pixmap,&mask) is added
	  in gdk-pixbuf module. 

2002-09-15 Araki Ken <arakiken@users.sf.net>

	* If cursor is located at the second byte of a multi-byte character,
	  cursor moves strangely, when bce is enabled. fixed.

2002-09-12 Araki Ken <arakiken@users.sf.net>

	* 2.6.1 released
	  (tag "rel-2_6_1")

2002-09-12 Araki Ken <arakiken@users.sf.net>

	* The right-end column was not drawn correctly under anti-alias mode. fixed.
	  (Thanks to Sato Seiichi san)
	* INCDIR macro was wrong. fixed.
	  (Thanks to Nakada Nobuyoshi asn)

2002-09-08 Araki Ken <arakiken@users.sf.net>

	* Screen of logged lines which contains multi byte characters got corrupt. fixed.
	* Tanween characters were ignored when arabic characters shaped. fixed.
	* Added doc/ja/README.confapp.

2002-09-08 Seiichi SATO <ssato@sh.rim.or.jp>

	* Added mlterm-icon-24colors-[12].png for low color depth.

2002-09-08 Araki Ken <arakiken@users.sf.net>
