@@ -1,5 +1,9 @@
 2002-09-27 Araki Ken <arakiken@users.sf.net>
 
+	* The last character of a wraparound line was not deleted by BS + ' '. fixed.
+
+2002-09-27 Araki Ken <arakiken@users.sf.net>
+
 	* x_imagelib_*.o linked directly, not via x_imagelib.o.
 	  (Thanks to Nobuyoshi Nakada san)
 
